--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div>
-  <app-reportes></app-reportes>
+<app-header></app-header>
+<div class="container my-3 pb-5">
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
+<app-footer></app-footer>
